@@ -84,6 +84,9 @@
                         <a id="linuxquestions" onclick="toggle_account(this)">LinuxQuestions</a>
                     </li>
                     <li class="entry">
+                        <a id="mastodon" onclick="toggle_account(this)">Mastodon</a>
+                    </li>
+                    <li class="entry">
                         <a id="movellas" onclick="toggle_account(this)">Movellas</a>
                     </li>
                     <li class="entry">
@@ -114,13 +117,7 @@
                         <a id="twitch" onclick="toggle_account(this)">Twitch</a>
                     </li>
                     <li class="entry">
-                        <a id="twitter" onclick="toggle_children(this)">Twitter</a>
-                    </li>
-                    <li class="entry-twitter child-entry" style="display:none;">
-                        <a id="twitter-main" onclick="toggle_account(this)">Main</a>
-                    </li>
-                    <li class="entry-twitter child-entry" style="display:none;">
-                        <a id="twitter-sullivan" onclick="toggle_account(this)">The Records of Dr Sullivan</a>
+                        <a id="twitter" onclick="toggle_account(this)">Twitter</a>
                     </li>
                     <li class="entry">
                         <a id="wattpad" onclick="toggle_account(this)">Wattpad</a>
