@@ -24,6 +24,7 @@
             <!-- Header will be inserted here -->
         </div>
         <div id="body-container" class="outer-container">
+            <a id="mastodon-identifier" style="display:none;" rel="me" href="https://mastodon.online/@murdomaclachlan"></a>
             <main class="inner-container">
                 <div class="text-row">
                     <div class="text-column">
@@ -39,7 +40,7 @@
                             <h2><a id="about-me" href="#about-me">About Me</a></h2>
                             <p>I am Murdo Maclachlan. I'm a <span id="age"></span>-year-old Scottish aspiring author and poet, currently studying for a Bachelor's degree in software engineering. I'm also a hobbyist musician, composing and singing when I find the time, and a <a href="endeavours#transcribing"> volunteer content transcriber</a>.
 
-                            Despite my degree of choice, I intend to do everything I can to avoid working in computing. I have a great love of fantasy and science fiction and it's been my goal to write both professionally for over 7 years now. More detail on this matter can be found <a href="endeavours#writing">here</a>.
+                            Despite my degree of choice, I intend to do everything I can to avoid working in computing. I have a great love of fantasy and science fiction, and it's been my goal to write both professionally for over 7 years now. More detail on this matter can be found <a href="endeavours#writing">here</a>.
 
                             If you're interested in my pronouns & other aspects of my identity, you can find that information <a href="identity">here</a>.
                             </p>
